Etherium Kluych Posleden Variant

--- a/Bert/Info.plist
+++ b/Bert/Info.plist
@@ -48,5 +48,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleDisplayName</key>
+	<string>ePI Read</string>
 </dict>
 </plist>
